--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ee.loader.js";
+      var loaderUrl = buildUrl + "/rr.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ee.data.unityweb",
-        frameworkUrl: buildUrl + "/ee.framework.js.unityweb",
-        codeUrl: buildUrl + "/ee.wasm.unityweb",
+        dataUrl: buildUrl + "/rr.data.unityweb",
+        frameworkUrl: buildUrl + "/rr.framework.js.unityweb",
+        codeUrl: buildUrl + "/rr.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebGL",
